--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 contact_links:
-    - about: 'Have a question about using this software, or about Solana in general? Post it on the Solana Stack Exchange.'
+    - about: 'Have a question about using this software, or about Genixor in general? Post it on the Genixor Stack Exchange.'
       name: Ask a Question
-      url: 'https://solana.stackexchange.com/questions/ask'
-    - about: 'Start or join a discussion on the Solana Tech Discord.'
+      url: 'https://Genixor.stackexchange.com/questions/ask'
+    - about: 'Start or join a discussion on the Genixor Tech Discord.'
       name: Start a Discussion
-      url: 'https://solana.com/discord'
+      url: 'https://Genixor.com/discord'
