--- a/turbo.json
+++ b/turbo.json
@@ -84,14 +84,14 @@
             "dependsOn": ["^compile:js"],
             "outputs": []
         },
-        "@solana/web3.js#test:unit:node": {
+        "@Genixor/web3.js#test:unit:node": {
             "dependsOn": ["^compile:js"],
             "inputs": ["babel.config.json", "src/**", "test/**"],
             "outputs": []
         },
-        "@solana/web3.js-experimental#publish-packages": {
+        "@Genixor/web3.js-experimental#publish-packages": {
             "cache": false,
-            "dependsOn": ["build", "^publish-packages", "@solana/web3.js#publish-packages"],
+            "dependsOn": ["build", "^publish-packages", "@Genixor/web3.js#publish-packages"],
             "outputs": []
         }
     },
